--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         <div class="collapse navbar-collapse ms-5" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="#" id="infoBtn">About</a>
+                    <a class="nav-link mx-2" href="#" id="infoBtn">How to play</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <button href="#" id="randomBtn" class="btn btn-secondary">Random</button>
+                    <button href="#" id="randomBtn" class="btn btn-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+                      </svg></button>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
