updated how to play

--- a/index.html
+++ b/index.html
@@ -96,11 +96,9 @@
                 <p>r●dactle is a browser game where the user tries to determine the subject of a random obfuscated Wikipedia article.</a></p>
                 <p>Original created by <a href="https://www.twitter.com/jhntrnr" target="_blank">John Turner</a> (<a href="https://www.patreon.com/jhntrnr" target="_blank">patreon</a>)</p>
                 <p id="yesterday"></p>
-                <h5>How to Play</h5>
+                <h5>How to play</h5>
                 <ul>
-                    <li>Type a word into the input box and press Enter or the Guess button.</li>
-                    <li>All occurrences of that word will become unredacted in the article body.</li>
-                    <li>To win, figure out the title or subject of the article.</li>
+                    <li>Guess words to figure out the title of the Wikipedia article!</li>
                 </ul>
                 <p class="text-secondary">Version 1.0</p>
             </div>
