updated how to play 2

--- a/index.html
+++ b/index.html
@@ -89,17 +89,14 @@
         <div class="modal-dialog">
         <div class="modal-content text-dark">
             <div class="modal-header">
-            <h5 class="modal-title" id="infoModalLabel">Welcome to r●dactle!</h5>
+            <h5 class="modal-title" id="infoModalLabel">How to play</h5>
             <button type="button" class="btn-close closeInfo" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>r●dactle is a browser game where the user tries to determine the subject of a random obfuscated Wikipedia article.</a></p>
-                <p>Original created by <a href="https://www.twitter.com/jhntrnr" target="_blank">John Turner</a> (<a href="https://www.patreon.com/jhntrnr" target="_blank">patreon</a>)</p>
-                <p id="yesterday"></p>
-                <h5>How to play</h5>
                 <ul>
                     <li>Guess words to figure out the title of the Wikipedia article!</li>
                 </ul>
+                <p>Original created by <a href="https://www.twitter.com/jhntrnr" target="_blank">John Turner</a> (<a href="https://www.patreon.com/jhntrnr" target="_blank">patreon</a>)</p>
                 <p class="text-secondary">Version 1.0</p>
             </div>
             <div class="modal-footer">
