--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div>
                         <label>
-                            <input name="checkbox" type="checkbox" id="autoPlural" class="configCheck"> Attempt to automatically pluralize and singularize guesses. There are certain edge cases (e.g. guessing a nonsense word like "asdf") where this will submit nonsense guesses.</input><br><br>
+                            <input name="checkbox" type="checkbox" id="autoPlural" class="configCheck"> Attempt to automatically pluralize and singularize guesses</input><br><br>
                         </label>
                     </div>
                     <br/>
