--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     
       gtag('config', 'G-XJ8GHB89KF');
     </script>
-    <title>r●dactle - A puzzle game</title>
+    <title>r●dactle+ - A puzzle game</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <span class="navbar-brand mb-0 h1 mx-4">r●dactle</span>
+        <span class="navbar-brand mb-0 h1 mx-4">r●dactle+</span>
         <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
